# rs-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Rust-vs-TS-performance.md
.github/workflows/: ci.yml
benches/: atomic_beef_bench.rs  bignumber_bench.rs  bn_serialization_bench.rs  dispatch_bench.rs  ecc_scalar_bench.rs  ecdsa_bench.rs  ecies_bench.rs  hash_bench.rs  reader_writer_bench.rs  script_findanddelete_bench.rs  script_serialization_bench.rs  symmetric_key_bench.rs  transaction_bench.rs
benches/data/: large_script.hex
benchmarks/: compare.js  mappings.json
benchmarks/results/: atomic-beef-results.json  bignumber-results.json  bn-serialization-results.json  ecc-scalar-results.json  ecdsa-results.json  ecies-results.json  hash-results.json  optimization-summary.md  reader-writer-results.json  script-findanddelete-results.json  script-serialization-results.json  symmetric-key-results.json  transaction-results.json
examples/: address_from_wif.rs  certificate_operations.rs  create_hmac.rs  create_signature.rs  create_wallet.rs  ecies_encrypt.rs  encrypt_decrypt.rs  hd_key_derivation.rs  inscription_transaction.rs  keyshares_backup.rs  op_return_transaction.rs  p2pkh_transaction.rs  verify_beef.rs  wallet_client_action.rs
src/: lib.rs
src/auth/: error.rs  mod.rs  peer.rs  session_manager.rs  types.rs
src/compat/: bip32.rs  bip39.rs  bsm.rs  ecies.rs  error.rs  mod.rs
src/primitives/: aes.rs  aes_cbc.rs  aes_gcm.rs  base_point.rs  big_number.rs  curve.rs  drbg.rs  ecdsa.rs  error.rs  hash.rs  jacobian_point.rs  k256.rs  key_shares.rs  mersenne.rs  mod.rs  montgomery.rs  (+11 more)
test-vectors/: aes_cbc.json  aes_gcm.json  beef_valid.json  big_number.json  bip32_vectors.json  bip39_vectors.json  bsm_vectors.json  bump_invalid.json  bump_valid.json  drbg.json  ecdsa_sign.json  ecdsa_verify.json  ecies_vectors.json  hmac_sha256.json  hmac_sha512.json  pbkdf2_vectors.json  point_operations.json  private_key_wif.json  public_key_der.json  ripemd160.json  schnorr.json  sha256.json  sha512.json  sighash.json  signature_der.json  transaction_valid.json
tests/: wallet_cached_key_deriver.rs  wallet_client.rs  wallet_key_deriver.rs  wallet_proto_wallet.rs  wallet_serializer_vectors.rs
(+134 files in other folders)
